--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,9 @@ script:
   - bundle exec rake cucumber
   - $CCTR format-coverage --output coverage/codeclimate.$SUITE.json
 after_script:
-  - $CCTR sum-coverage coverage/codeclimate.*.json | $CCTR upload-coverage
-  - $CCTR after-build --exit-code $TRAVIS_TEST_RESULT
+ # - $CCTR sum-coverage coverage/codeclimate.*.json | $CCTR upload-coverage
+ # - $CCTR after-build --exit-code $TRAVIS_TEST_RESULT
+  - ./cc-test-reporter format-coverage -t simplecov -o coverage/codeclimate.backend.json coverage/backend/.resultset.json # Format backend coverage
+  - ./cc-test-reporter format-coverage -t lcov -o coverage/codeclimate.frontend.json coverage/frontend/lcov.info  # Format frontend coverage
+  - ./cc-test-reporter sum-coverage coverage/codeclimate.*.json -p 2                  # Sum both coverage parts into coverage/codeclimate.json
+  - if [[ "$TRAVIS_TEST_RESULT" == 0 ]]; then ./cc-test-reporter upload-coverage; fi  # Upload coverage/codeclimate.json
