--- a/.travis.yml
+++ b/.travis.yml
@@ -14,13 +14,12 @@ before_install:
 script:
   - bundle exec rake db:setup
   - bundle exec rake spec
-  - $CCTR format-coverage --output coverage/codeclimate.$SUITE.json
+  #- $CCTR format-coverage --output coverage/codeclimate.$SUITE.json
   - bundle exec rake cucumber
-  - $CCTR format-coverage --output coverage/codeclimate.$SUITE.json
+  #- $CCTR format-coverage --output coverage/codeclimate.$SUITE.json
 after_script:
- # - $CCTR sum-coverage coverage/codeclimate.*.json | $CCTR upload-coverage
- # - $CCTR after-build --exit-code $TRAVIS_TEST_RESULT
-  - ./cc-test-reporter format-coverage -t simplecov -o coverage/codeclimate.backend.json coverage/backend/.resultset.json # Format backend coverage
-  - ./cc-test-reporter format-coverage -t lcov -o coverage/codeclimate.frontend.json coverage/frontend/lcov.info  # Format frontend coverage
-  - ./cc-test-reporter sum-coverage coverage/codeclimate.*.json -p 2                  # Sum both coverage parts into coverage/codeclimate.json
-  - if [[ "$TRAVIS_TEST_RESULT" == 0 ]]; then ./cc-test-reporter upload-coverage; fi  # Upload coverage/codeclimate.json
+  #- $CCTR sum-coverage coverage/codeclimate.*.json | $CCTR upload-coverage
+  #- $CCTR after-build --exit-code $TRAVIS_TEST_RESULT
+  - if [[ "$TRAVIS_TEST_RESULT" == 0 ]]; then ./cc-test-reporter format-coverage -t simplecov -o ./coverage/codeclimate.$CI_NODE_INDEX.json ./coverage/spec/.resultset.json; fi
+  - if [[ "$TRAVIS_TEST_RESULT" == 0 ]]; then ./cc-test-reporter sum-coverage --output - --parts $CI_NODE_TOTAL coverage/codeclimate.*.json | ./cc-test-reporter upload-coverage --input -; fi
+  - $CCTR after-build --exit-code $TRAVIS_TEST_RESULT
